cfn_benchmark/cfn_templates/b82__cloudformation_deployer/templates__main.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  VPC template

################################################################################
#                                  Metadata                                    #
################################################################################
Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label: { default: "Required parameters" }
        Parameters:
          - ProjectName
          - Environment
          - VPCCIDR
          - KeyPairName
          - BucketName
          - InstanceProfile

################################################################################
#                               Mappings                                       #
################################################################################
Mappings: {}

################################################################################
#                               Parameters                                     #
################################################################################
Parameters:
  ProjectName:
    Type: String
    #Default: "deployer-demo"
    Description: "The project name"

  Environment:
    Type: String
    #Default: "demo"
    Description: "Environment Name"
    AllowedValues:
      - "dev"
      - "stag"
      - "prod"
      - "demo"

  VPCCIDR:
    Type: String
    Description: "VPC CIDR Format (/16)"
    #Default: "10.99.0.0/16"
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([1][6-9]|2[0-4]))$"

  KeyPairName:
    Type: String
    #Default: "test-11111111-openvpn"
    Description: "Key pair name"

  BucketName:
    Type: String
    #Default: "test-11111111"
    Description: "Bucket Name"

  CreateRedshift:
    Type: String
    #Default: "False"
    Description: "Create or not Redshift"
    AllowedValues:
      - "True"
      - "False"

  InstanceProfile:
    Type: String
    Description: "Instance profile name"

################################################################################
#                               Conditions                                     #
################################################################################
Conditions:
  IsRedshiftCreated: !Equals [!Ref CreateRedshift, "True"]

################################################################################
#                               Resources                                      #
################################################################################
Resources:
  # Wordpress public security group
  EC2WordpressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    #DeletionPolicy: Retain
    Properties:
      GroupDescription: "Wordpress Site security group"
      GroupName: "wordpress"
      VpcId: !GetAtt NetworkStack.Outputs.VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 185.90.68.114/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 185.90.68.114/32
          Description: "Enable http traffic"
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 185.90.68.114/32
          Description: "Enable ping"

  # Network
  NetworkStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${ProjectName}/templates/nested/network.yaml"
      Parameters:
        VPCCIDR: !Ref VPCCIDR
        ProjectName: !Ref ProjectName
        Environment: !Ref Environment

  # EC2
  EC2NestedStack:
    Type: AWS::CloudFormation::Stack
    #DeletionPolicy: Retain
    DependsOn: RDSNestedStack
    Properties:
      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${ProjectName}/templates/nested/ec2.yaml"
      Parameters:
        VPCId: !GetAtt NetworkStack.Outputs.VPCId
        SubnetPublicAId: !GetAtt NetworkStack.Outputs.SubnetPublicAId
        SubnetPublicBId: !GetAtt NetworkStack.Outputs.SubnetPublicBId
        SubnetPrivateAId: !GetAtt NetworkStack.Outputs.SubnetPrivateAId
        SubnetPrivateBId: !GetAtt NetworkStack.Outputs.SubnetPrivateBId
        SubnetPrivateCId: !GetAtt NetworkStack.Outputs.SubnetPrivateCId
        SubnetPrivateNatAId: !GetAtt NetworkStack.Outputs.SubnetPrivateNatAId
        SubnetPrivateNatBId: !GetAtt NetworkStack.Outputs.SubnetPrivateNatBId
        ProjectName: !Ref ProjectName
        VPCCIDR: !Ref VPCCIDR
        KeyPairName: !Ref KeyPairName
        BucketName: !Ref BucketName
        InstanceProfile: !Ref InstanceProfile
        EC2WordpressSecurityGroupId: !GetAtt EC2WordpressSecurityGroup.GroupId
        RDSMySQLEndpoint: !GetAtt RDSNestedStack.Outputs.MySQLRDSEndpoint

  # RDS
  RDSNestedStack:
    Type: AWS::CloudFormation::Stack
    #DeletionPolicy: Retain
    Properties:
      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${ProjectName}/templates/nested/rds.yaml"
      Parameters:
        VPCId: !GetAtt NetworkStack.Outputs.VPCId
        SubnetPrivateAId: !GetAtt NetworkStack.Outputs.SubnetPrivateAId
        SubnetPrivateBId: !GetAtt NetworkStack.Outputs.SubnetPrivateBId
        SubnetPrivateCId: !GetAtt NetworkStack.Outputs.SubnetPrivateCId
        VPCCIDR: !Ref VPCCIDR
        EC2WordpressSecurityGroupId: !GetAtt EC2WordpressSecurityGroup.GroupId

  # DynamoDB
  DynamoNestedStack:
    Type: AWS::CloudFormation::Stack
    # DeletionPolicy: Retain
    Properties:
      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${ProjectName}/templates/nested/dynamodb.yaml"

  # Redshift
  RedshiftNestedStack:
    Type: AWS::CloudFormation::Stack
    Condition: IsRedshiftCreated
    Properties:
      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${ProjectName}/templates/nested/redshift.yaml"
      Parameters:
        VPCId: !GetAtt NetworkStack.Outputs.VPCId
        SubnetPrivateAId: !GetAtt NetworkStack.Outputs.SubnetPrivateAId
        SubnetPrivateBId: !GetAtt NetworkStack.Outputs.SubnetPrivateBId
        SubnetPrivateCId: !GetAtt NetworkStack.Outputs.SubnetPrivateCId
        VPCCIDR: !Ref VPCCIDR

################################################################################
#                               Outputs                                        #
################################################################################
Outputs: {}
