cfn_benchmark/cfn_templates/b82__cloudformation_deployer/templates__nested__redshift.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  VPC template

################################################################################
#                                  Metadata                                    #
################################################################################
Metadata:

  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label: {default: 'Required parameters'}
        Parameters:
          - VPCId
          - VPCCIDR
          - SubnetPrivateAId
          - SubnetPrivateBId
          - SubnetPrivateCId

################################################################################
#                               Parameters                                     #
################################################################################
Parameters:

  VPCId:
    Type: String
    Description: "VPC ID"

  SubnetPrivateAId:
    Type: String
    Description: "Subnet private A id"

  SubnetPrivateBId:
    Type: String
    Description: "Subnet private B id"

  SubnetPrivateCId:
    Type: String
    Description: "Subnet private C id"

  VPCCIDR:
    Type: String
    NoEcho: True
    Description: "VPC CIDR"

################################################################################
#                               Resources                                      #
################################################################################
Resources:

  # Redshift Demo
  RedshiftClusterDemo:
    Type: AWS::Redshift::Cluster
    Properties:
      ClusterType: single-node
      NodeType: dc2.large
      DBName: "deployer-redshift-demo"
      MasterUsername: "admin-redshift"
      MasterUserPassword: "passWord4444"
      ClusterParameterGroupName: !Ref RedshiftClusterParameterGroup
      VpcSecurityGroupIds:
        - Ref: RedshiftSecurityGroup
      ClusterSubnetGroupName: !Ref RedshiftClusterSubnetGroup
      Port: "5439"

  RedshiftClusterParameterGroup:
    Type: AWS::Redshift::ClusterParameterGroup
    Properties:
      Description: "Cluster parameter group Redshift"
      ParameterGroupFamily: redshift-1.0
      Parameters:
        - ParameterName: enable_user_activity_logging
          ParameterValue: "true"

  RedshiftClusterSubnetGroup:
    Type: AWS::Redshift::ClusterSubnetGroup
    Properties:
      Description: "Cluster subnet group Redshift"
      SubnetIds:
        - Ref: SubnetPrivateAId
        - Ref: SubnetPrivateBId
        - Ref: SubnetPrivateCId

  # Redshift security group
  RedshiftSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Redshift security group"
      GroupName: "redshift"
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5439
          ToPort: 5439
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 5439
          ToPort: 5439
          CidrIp: 185.90.68.114/32

################################################################################
#                                   Outputs                                    #
################################################################################
Outputs: {}
